MDEV-5005: Subquery in Procedure somehow affecting temporary table

Removed unneeded set of TABLE_LIST::skip_temporary flag.