sql/sql_lex.cc
@@ -3436,10 +3436,7 @@ void SELECT_LEX::mark_as_belong_to_derived(TABLE_LIST *derived)
   TABLE_LIST *tl;
   List_iterator<TABLE_LIST> ti(leaf_tables);
   while ((tl= ti++))
-  {
-    tl->skip_temporary= 1;
     tl->belong_to_derived= derived;
-  }
 }
 
 
